# captioncraft

captioncraft/: README.md  pubspec.yaml
captioncraft/android/: build.gradle.kts  gradle.properties
captioncraft/android/app/: build.gradle  build.gradle.kts
captioncraft/android/app/src/main/: AndroidManifest.xml
captioncraft/android/app/src/main/cpp/: CMakeLists.txt
captioncraft/android/app/src/main/kotlin/com/captioncraft/captioncraft/: MainActivity.kt
captioncraft/ios/Runner/: Info.plist
captioncraft/ios/Runner.xcodeproj/: project.pbxproj
captioncraft/lib/: app.dart  main.dart
captioncraft/lib/core/models/: anim_preset.dart  caption_segment.dart  caption_segment.freezed.dart  caption_segment.g.dart  caption_style.dart  caption_style.freezed.dart  caption_style.g.dart  project.dart  project.freezed.dart  project.g.dart
captioncraft/lib/core/providers/: export_provider.dart  history_provider.dart  playback_provider.dart  project_provider.dart
captioncraft/lib/core/services/: export_service.dart  ffmpeg_service.dart  project_service.dart  transcription_service.dart  whisper_binding.dart  whisper_binding_stub.dart
captioncraft/lib/core/utils/: ass_builder.dart  segment_grouper.dart  time_formatter.dart  undo_redo.dart
captioncraft/lib/features/editor/: editor_screen.dart
captioncraft/lib/features/editor/widgets/: caption_edit_sheet.dart  caption_list.dart  caption_overlay.dart  global_style_panel.dart  timeline_strip.dart  video_preview.dart
captioncraft/lib/features/export/: export_sheet.dart
captioncraft/lib/features/home/: home_screen.dart
captioncraft/lib/features/home/widgets/: empty_home_state.dart  project_card.dart
captioncraft/lib/features/processing/: processing_screen.dart
captioncraft/lib/shared/theme/: app_colors.dart  app_theme.dart  app_typography.dart
captioncraft/lib/shared/widgets/: cc_bottom_sheet.dart  cc_button.dart  font_picker.dart  time_input.dart
captioncraft/linux/: CMakeLists.txt  my_application.cc
captioncraft/macos/Flutter/: GeneratedPluginRegistrant.swift
captioncraft/macos/Runner.xcodeproj/: project.pbxproj
captioncraft/macos/Runner.xcodeproj/xcshareddata/xcschemes/: Runner.xcscheme
captioncraft/macos/Runner/Configs/: AppInfo.xcconfig
captioncraft/test/: widget_test.dart
captioncraft/web/: index.html  manifest.json
captioncraft/windows/: CMakeLists.txt
captioncraft/windows/runner/: Runner.rc  main.cpp
docs/: CAPTIONCRAFT_AGENT_SPEC.md  CAPTIONCRAFT_PRD.md  PHASE1_PLAN.md  PHASE2_PLAN.md  PHASE3_PLAN.md  PHASE4_PLAN.md  PHASE5_PLAN.md  PHASE6_PLAN.md
